# blocc

./: .gitignore  Cargo.toml  README.md  build  buildr
.cargo/: config.toml
blocc_game/: Cargo.toml
blocc_game/env/: README.md
blocc_game/src/: main.rs
blocc_server/: Cargo.toml
bloccgame/: Cargo.toml
bloccserver/env/: README.md
client/: README.md
client/app_icon/: Cargo.toml
client/app_icon/src/: lib.rs
client/assets/: Cargo.toml
client/assets/assets/launcher/: background.qoi
client/assets/src/: lib.rs
client/client_state/: Cargo.toml
client/client_state/src/: lib.rs
client/egui_style/: Cargo.toml
client/egui_style/src/: lib.rs
client/embedded_assets/: Cargo.toml
client/embedded_assets/assets/: icon.qoi
client/embedded_assets/assets/launcher/: background.qoi
client/embedded_assets/src/: lib.rs
client/icon/: Cargo.toml
client/icon/src/: lib.rs
client/launcher/: Cargo.toml
client/launcher/src/: lib.rs
client/profile/: Cargo.toml
client/profile/src/: lib.rs
client/profile_selection/: Cargo.toml
client/profile_selection/src/: lib.rs
client/style/: Cargo.toml
client/style/src/: lib.rs
common/: README.md
common/bevy_rapid_qoi/: Cargo.toml
common/bevy_rapid_qoi/src/: lib.rs
common/mod_api/: Cargo.toml
common/mod_api/src/: lib.rs
common/player_identity/: Cargo.toml
common/player_identity/src/: lib.rs
common/text_asset/: Cargo.toml
common/text_asset/src/: lib.rs
lib/logging/: Cargo.toml
lib/logging/src/: lib.rs
lib/window_icon/: Cargo.toml
lib/window_icon/src/: lib.rs
mod/example/: Cargo.toml
mod/example/src/: lib.rs
scripts/: build.sh  buildr.sh
server/: README.md
