[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[workspace]

resolver = "2"

members = [
    "blocc_game",
    "blocc_server",
    "client/icon",
    "client/client_state",
    "client/launcher",
    "client/style",
    "client/embedded_assets",
    "client/profile",
    "common/player_identity",
    "common/bevy_rapid_qoi",
    "common/modapi",
    "common/text_asset",
]