[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[workspace]

resolver = "2"

members = [
    "blocc_game",
    "blocc_server",
    "client/app_icon",
    "client/client_state",
    "client/launcher",
    "client/egui_style",
    "client/embedded_assets",
    "client/profile_selection",
    "common/player_identity",
    "common/modapi",
    "common/text_asset",
]