[package]
name = "blocc_game"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_gilrs",
    "bevy_winit",
    "animation",
    "x11",
    "filesystem_watcher",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_text",
    "wayland",
    "subpixel_glyph_atlas",
    "serialize",
    "bevy_dynamic_plugin",
    #"png",
    #"hdr",
    #"vorbis", 
    #"ktx2", # preferred format for GPU textures
    #"dds",
    #"jpeg",
    #"bmp",
    #"tga",
    #"basis-universal",
    #"zstd", # needed if using zstd in KTX2 files
    #"flac",
    #"mp3",
    #"wav",
    #"trace",        # Enable tracing for performance measurement
    #"trace_tracy",  # Tracing using `tracy`
    #"trace_chrome", # Tracing using the Chrome format
    #"wgpu_trace",   # WGPU/rendering tracing
]

[dependencies.bevy_kira_audio]
version = "0.13.0" # https://crates.io/crates/bevy_kira_audio

[dependencies.bevy_egui]
version = "0.18.0" # https://crates.io/crates/bevy_egui

[dependencies.bevy_framepace]
version = "0.9.1" # https://crates.io/crates/bevy_framepace


## internal
[dependencies]
client_state = { path = "../client/client_state" }
launcher = { path = "../client/launcher" }
player_identity = { path = "../common/player_identity" }
bevy_rapid_qoi = { path = "../common/bevy_rapid_qoi" }