[package]
name = "bloccserver"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "bevy_asset",
    #"bevy_scene",
    #"bevy_gilrs", # Gamepad support
    #"bevy_winit",
    #"animation",
    #"x11",
    #"filesystem_watcher",
    #"bevy_render",
    #"bevy_core_pipeline",
    #"bevy_sprite",
    #"bevy_pbr",
    #"bevy_gltf",
    #"bevy_text",
    #"bevy_ui",
    #"wayland",
    #"subpixel_glyph_atlas",
    "serialize",
    "bevy_dynamic_plugin",
    #"png",
    #"hdr",
    #"vorbis", 
    #"ktx2", # preferred format for GPU textures
    #"dds",
    #"jpeg",
    #"bmp",
    #"tga",
    #"basis-universal",
    #"zstd", # needed if using zstd in KTX2 files
    #"flac",
    #"mp3",
    #"wav",
    #"dynamic",      # Dynamic linking for faster compile-times
    #"trace",        # Enable tracing for performance measurement
    #"trace_tracy",  # Tracing using `tracy`
    #"trace_chrome", # Tracing using the Chrome format
    #"wgpu_trace",   # WGPU/rendering tracing
]