[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies.bevy_egui]
version = "0.18.0"

[dependencies.egui]
version = "0.20.1"

[dependencies.bevy_framepace]
version = "0.9.1"

[dependencies.rapid-qoi]
version = "0.6.1"

## Internal
[dependencies]
client_state = { path = "../client_state" }
embedded_assets = { path = "../embedded_assets" }
player_identity = { path = "../../common/player_identity" }
profile_selection = { path = "../profile_selection" }
text_asset = { path = "../../common/text_asset" }