[package]
name = "style"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies.egui]
version = "0.20.1"

[dependencies.bevy_egui]
version = "0.18.0"

# Internal
[dependencies]
assets = { path = "../assets" }