[package]
name = "player_identity"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies.ed25519-dalek]
version = "1.0.1"

[dependencies.rand]
version = "0.7.0"

[dependencies.base64]
version = "0.20.0"

[dependencies.toml]
version = "0.5.10"