[package]
name = "player_identity"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <sesyroc_0@paranoici.org>"]
repository = "https://github.com/voidentente/blocc"

[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies.ed25519-dalek]
version = "1.0.1"
features = ["serde"]

[dependencies.rand]
version = "0.7.0"

[dependencies.ron]
version = "0.8.0"

[dependencies.serde]
version = "1.0.151"
features = ["derive"]